Do not update the history while searching

The history can focus the web view which closes the find bar while still
searching.

https://bugzilla.gnome.org/show_bug.cgi?id=697194